Firefox fixes (SF-388 & SF-374) - Fix: Zoom in/out not working on Firefox - Fix: Zoom in/out buttons are always available to click even if the toggle button wasn't clicked

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/font-size/font-size.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/font-size/font-size.component.scss
@@ -10,9 +10,11 @@
     @include mdc-icon-button-size(24px, 24px, 8px);
   }
   #font-menu-surface {
-    display: flex;
     right: unset !important;
     left: -50%;
     overflow: hidden;
+    .buttons-group {
+      display: flex;
+    }
   }
 }
